fixed mobile logo stretch

--- a/styles.scss
+++ b/styles.scss
@@ -55,6 +55,7 @@ p {
         max-width: 20vmin;
         max-height: 20vmin;
         min-width: 100px;
+        min-height: 100px;
         //logo
     }
     .nav {
